Source/WebCore/rendering/style/CounterDirectives.h
@@ -39,8 +39,8 @@ struct CounterDirectives {
     }
 
     bool m_reset;
-    int m_resetValue;
     bool m_increment;
+    int m_resetValue;
     int m_incrementValue;
 };
 
@@ -48,6 +48,8 @@ bool operator==(const CounterDirectives&, const CounterDirectives&);
 inline bool operator!=(const CounterDirectives& a, const CounterDirectives& b) { return !(a == b); }
 
 typedef HashMap<RefPtr<AtomicStringImpl>, CounterDirectives> CounterDirectiveMap;
+
+PassOwnPtr<CounterDirectiveMap> clone(const CounterDirectiveMap&);
 
 } // namespace WebCore
 
