Source/WebCore/rendering/style/StyleRareNonInheritedData.h
@@ -76,9 +76,10 @@ public:
     bool operator==(const StyleRareNonInheritedData&) const;
     bool operator!=(const StyleRareNonInheritedData& o) const { return !(*this == o); }
 
-    bool contentDataEquivalent(const StyleRareNonInheritedData& o) const;
-    bool shadowDataEquivalent(const StyleRareNonInheritedData& o) const;
-    bool reflectionDataEquivalent(const StyleRareNonInheritedData& o) const;
+    bool contentDataEquivalent(const StyleRareNonInheritedData&) const;
+    bool counterDataEquivalent(const StyleRareNonInheritedData&) const;
+    bool shadowDataEquivalent(const StyleRareNonInheritedData&) const;
+    bool reflectionDataEquivalent(const StyleRareNonInheritedData&) const;
     bool animationDataEquivalent(const StyleRareNonInheritedData&) const;
     bool transitionDataEquivalent(const StyleRareNonInheritedData&) const;
 
